Access data by document id

--- a/taller-2-main/details/index.html
+++ b/taller-2-main/details/index.html
@@ -14,16 +14,16 @@
 
         <!---------------   HEADER -------------------->
 
-    <header>
+    <<header>
         <nav class="nav-wrapper">
             <img src="/res/logo white.png" alt="">
             <a href="#" class="brand-logo"><strong>CCM</strong></a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="/index.html">INICIO</a></li>
-                <li><a href="/market.html">COMPRA TU VEHÍCULO</a></li>
-                <li><a href="#">TRABAJA CON NOSOTROS</a></li>
-                <li><a href="#">NOTICIAS</a></li>
-                <li><a href="#">CONTACTANOS</a></li>
+                <li><a href="index.html">INICIO</a></li>
+                <li><a href="market.html">COMPRA TU VEHÍCULO</a></li>
+                <li><a href="create.html">VENDE TU VEHICULO</a></li>
+                <li><a href="signup.html">REGISTRATE</a></li>
+                <li><a href="login.html">INICIAR SESIÓN</a></li>
             </ul>
         </nav>
     </header>
@@ -82,7 +82,7 @@
 
     <!--script src="/script.js"></script-->
     <script type="module" src="/productList.js"></script>
-    <script src="/details/details.js"></script>
+    <script type="module" src="/details/details.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script type="text/javascript" src="/js/materialize.min.js"></script>
 </body>
