--- a/taller-2-main/market.html
+++ b/taller-2-main/market.html
@@ -47,9 +47,10 @@
       </form>
 
       <h6 class="h6-red">Tipo de Vehículo</h6>
-      <div class="browser-default">
+      <div class="browser-default ">
         <label for="vehType">Tipo de Vehiculo</label>
-        <select name="vehType" id="vehType" >
+        <select name="vehType" id="vehType">
+          <!-- para que funcione le puse display inherit en el css al tag select-->
           <option value="" selected>Todos </option>
         </select>
       </div>
