--- a/taller-2-main/index.html
+++ b/taller-2-main/index.html
@@ -16,11 +16,11 @@
             <img src="/res/logo white.png" alt="">
             <a href="#" class="brand-logo"><strong>CCM</strong></a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="#">INICIO</a></li>
+                <li><a href="index.html">INICIO</a></li>
                 <li><a href="market.html">COMPRA TU VEHÍCULO</a></li>
-                <li><a href="#">TRABAJA CON NOSOTROS</a></li>
-                <li><a href="#">NOTICIAS</a></li>
-                <li><a href="#">CONTACTANOS</a></li>
+                <li><a href="create.html">VENDE TU VEHICULO</a></li>
+                <li><a href="signup.html">REGISTRATE</a></li>
+                <li><a href="login.html">INICIAR SESIÓN</a></li>
             </ul>
         </nav>
     </header>
